--- a/src/assets/scss/search.scss
+++ b/src/assets/scss/search.scss
@@ -1,24 +1,7 @@
-// Starter styles.
-:root {
-  --main: #208CFB;
-  --secondary: #001354;
-  --border: #ddd;
-  --title: #001;
-  --sub-title: #666;
-  --label: #aaa;
-  --radius: 3px;
-  --duration: .4s;
-  --transition: cubic-bezier(.25,.8,.25,1);
-  --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
 .search-container{
   width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 90vh;
+  position: relative;
 
   .search-header{
     h1{
@@ -42,6 +25,7 @@
         border: solid .5px var(--border);
         outline: none;
         transition: all var(--duration) var(--transition);
+        box-sizing: border-box;
 
         &:first-child {
           border-radius: var(--radius) 0 0 var(--radius);
@@ -70,6 +54,24 @@
             box-shadow:
               0 1px 3px rgba(0,0,0,0.12),
               0 1px 2px rgba(0,0,0,0.24);
+          }
+        }
+      }
+    }
+
+    @media only screen and (max-width : 480px) {
+      form {
+        flex-direction: column;
+
+        input {
+          width: 100%;
+
+          &:first-child {
+            border-radius: var(--radius) var(--radius) 0 0;
+          }
+  
+          &:last-child {
+            border-radius: 0 0 var(--radius) var(--radius);
           }
         }
       }
